
Version 2.3.5:

- Added language entry for "meticulous playlist selector" forge-config (only affects 1.21.1 and above).
- Improved verbose mode.


Version 2.3.4:

- Added forge-config option (meticulous playlist selector) for double-checking playlist selections to counteract incorrect readings caused by mod-interactions.


Version 2.3.3:

- Made a more robust system event and property reading in an attempt to fix incorrect behavior, likely due to mod-interactions.


Version 2.3.2:

- Fixed crash-bug related to the less-than operator in music configurations.
- Other fixes and improvements to code structure.


Version 2.3.1:

- Added a "verbose mode" forge-config option. When enabled, the values (of the events and properties) used to pick a playlist will be printed whenever the current playlist changes.
    * This information can be used when debugging music packs to see where odd behavior stems from.
- Fixed bug where the config option for "notify server support" has wrong name (be careful with that copy-pasta coding).


Version 2.3.0:

- Added lists data types (separate from playlists) and list quantifiers (i.e., "all" and "any") to the configuration language.
- Added a "$biome_tags" (string list) property that lists all the tag names of the players current biome.
- Added an "$effects" (string list) property that lists all active effects/(de-)buffs on the player.
- Added a "$bosses" (string list) property listing all active bosses (since multiple bosses can be active at once).
    * The old "$boss" property still works and simply gets the first boss in the list (same always, actually).
- Replaced the "print cave score" keybinding with a "print all readings" keybinding that prints all game state to the Minecraft log.
- Fixed bug that caused fishing music to constantly reset when moving around too much while fishing or having a very short fishing timeout.


Version 2.2.0:

- Added combat tracking to the music engine.