@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background-color: #f9f7f4">
 <head>
     <title>Ambience Mini IDE</title>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
