@@ -1,11 +1,19 @@
 package me.molybdenum.ambience_mini.engine.core.state;
 
+import org.jetbrains.annotations.Nullable;
+import org.slf4j.Logger;
+
 import java.util.List;
 import java.util.Optional;
 
-public interface BasePlayerState<TBlockPos, TVec3> {
+public interface BasePlayerState<TBlockPos, TVec3>
+{
+    // -----------------------------------------------------------------------------------------------------------------
+    // Execution
     boolean isNull();
     boolean notNull();
+
+    void prepare(@Nullable Logger logger);
 
 
     // -----------------------------------------------------------------------------------------------------------------
